// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default section 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  />
</Fragment>
`;

exports[`should render a section with a row 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    title="test"
  />
  <CellGrid
    dividerStyle="none"
    isSelectable={false}
    isSelected={false}
    isStriped={false}
    selectionStyle="default"
  >
    <Cell />
  </CellGrid>
</Fragment>
`;

exports[`should render a section with isCollapsible 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={true}
    level={2}
    title="test"
  />
</Fragment>
`;

exports[`should render a section with isCollpased 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={true}
    isCollapsible={false}
    level={2}
    title="test"
  />
</Fragment>
`;

exports[`should render a section with level 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={3}
    title="test"
  />
</Fragment>
`;

exports[`should render a section with metaData 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    metaData={Object {}}
    title="test"
  />
</Fragment>
`;

exports[`should render a section with onSelect 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    onSelect={[MockFunction]}
    title="test"
  />
</Fragment>
`;

exports[`should render a section with refCallback 1`] = `
<Fragment>
  <SectionHeader
    isCollapsed={false}
    isCollapsible={false}
    level={2}
    refCallback={[MockFunction]}
    title="test"
  />
</Fragment>
`;
